//
//  OpenTweetUITests.swift
//  OpenTweetUITests
//
//  Created by Olivier Larivain on 9/30/16.
//  Copyright © 2016 OpenTable, Inc. All rights reserved.
//

import XCTest

class OpenTweetUITests: XCTestCase {
        
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testTweetScreen() {
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        
        let app = XCUIApplication()
        let hoverButton = app.buttons["hoverButton"].tap()
        let tweetButton = app.buttons["Send My Tweet!"].tap()
        app.alerts["Oops! Not backend yet. Let's add your name to the feaure interaction list 😄"].scrollViews.otherElements.buttons["OK"].tap()
        app.staticTexts["Send Your First Tweet!"].swipeDown()
    }
}
